Switching to use valueOf instead of new Long/etc.
Former-commit-id: cffe1d0dd5aaf240f836496f9af1e9d3fdce25e4